--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.21.2",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
